Refactoring, added action handler

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif8266
 board = nodemcu
 framework = arduino
 build_flags = 
-	-D DEBUG_ENABLED ; Enable debug mode (comment if you don't want to see debug output in serial)
+	-D DEBUG_ENABLED
 lib_deps =
      DHT sensor library@1.3.0
      DallasTemperature
@@ -26,7 +26,7 @@ lib_deps =
      https://github.com/agnunez/ESP8266-I2C-LCD1602/
 
      ArduinoJson
-     WifiManager
+     https://github.com/tzapu/WiFiManager
 
-upload_rate = 115200
+upload_speed = 115200
 upload_port = /dev/tty.SLAB_USBtoUART
